--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:244qbtthxJ9KDj/IRO9+VM4eaHfjsWzsVBt2IY0aC8k=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=http://localhost
@@ -24,9 +24,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mariadb
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=awardpointsto
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=awardpoints
+DB_USERNAME=awardpoints
+DB_PASSWORD=REPLACEME
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
@@ -64,3 +64,10 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+
+GOOGLE_CLIENT_ID=REPLACEME
+GOOGLE_CLIENT_SECRET=REPLACEME
+GOOGLE_REDIRECT_URI=https://awardpointsto.ft1.us/callback/google
+
+
