--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:244qbtthxJ9KDj/IRO9+VM4eaHfjsWzsVBt2IY0aC8k=
+APP_KEY=base64:244qbtthxJ9KDj/IRO9+VM4eaHzsVBt2IY0aC8k=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=http://localhost
@@ -65,9 +65,8 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
 
-
 GOOGLE_CLIENT_ID=REPLACEME
 GOOGLE_CLIENT_SECRET=REPLACEME
 GOOGLE_REDIRECT_URI=https://awardpointsto.ft1.us/callback/google
 
-
+TEST_BEARER_TOKEN=REPLACEME
